--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -93,7 +93,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="exit">Выход</string>
     <string name="undo">Отменить</string>
     <string name="redo">Вернуть</string>
-    <string name="more">Ещё</string>
+    <string name="more">Дополнительно</string>
     <string name="notebook">Блокнот</string>
     <string name="help">Помощь</string>
     <string name="todo_list">Список дел</string>
@@ -242,7 +242,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="description">Описание</string>
     <string name="edit_picture">Редактировать изображение</string>
     <string name="math">Формулы</string>
-    <string name="enter_yaml_front_matter_attributes_to_show">Введите атрибуты YAML Front Matter, чтобы показать в начале просмотренных документов. Заголовок. Введите ключи, разделенные запятыми. Оставьте пустым для них или используйте \'*\' для всех. \n\nЕсли у вас есть ключ, т.е. title: \'Привет\' определено и в вашем тексте есть {{ post.title }} , он всегда будет заменен. Вы можете сделать пользовательские передние вещества отображать таким образом.</string>
     <string name="table_of_contents">Оглавление</string>
     <string name="miscellaneous">Прочее</string>
     <string name="textaction">Операция с текстом</string>
@@ -359,6 +358,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="add_context">Добавить контекст</string>
     <string name="add_project">Добавить проект</string>
     <string name="archive_completed_tasks">Архивировать завершенные задачи</string>
+
     <string name="create_new_file_or_folder">Создать новый файл или папку</string>
     <string name="choose_format">Выберите формат</string>
     <string name="selected">Выбрано</string>
@@ -433,5 +433,4 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="search_dynamically_for_notebook_root">Чтобы перейти по вики-ссылкам, необходимо динамически искать файл notebook.zim для определения корневого каталога текущей записной книжки. Установите флажок, если вы используете несколько цим-блокнотов или установленный в приложении каталог блокнота не соответствует вашему блокноту zim.</string>
     <string name="share_into_format_prefix_for_text_shared">Формат/Префикс для текста, общего в Markor. Следуйте правилам SimpleDateFormat Android.\n\nИспользуйте заполнитель \'%s\' (окружённый одинарными кавычками) для размещения общего текста. Если не указано, общий текст добавляется и формат используется в качестве префикса.</string>
     <string name="share_into_format">Поделиться - Формат</string>
-    <string name="auto_format">Автоформат</string>
 </resources>
