--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -242,7 +242,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="description">Descripción</string>
     <string name="edit_picture">Editar imagen</string>
     <string name="math">Matemáticas</string>
-    <string name="enter_yaml_front_matter_attributes_to_show">Introduzca los atributos YAML Front Matter para mostrar al principio de los documentos vistos. cabecera. Introduzca claves separadas por comas. Deje en blanco para ninguno o utilice \'*\' para todos. \n\nSi tiene alguna clave, p.e. title: \'Hola\' definido y hay {{ post.title }} en tu texto, siempre será reemplazado. Puedes hacer una visualización personalizada de la materia frontal de esta manera.</string>
+    <string name="enter_yaml_front_matter_attributes_to_show">Mostar los atributos YAML Front Matter ingresados en la parte superior de los documentos vistos. Introduzca las claves separadas por comas. Déjelo vacío para ninguno o use \'*\' para todos. \n\nSi se define algún atributo en el documento (es decir, título: \'Hola\') y también hay {{ post.title }} en su documento, se reemplaza. Puede crear un encabezado Front Matter personalizado de esta manera.</string>
     <string name="table_of_contents">Tabla de contenidos</string>
     <string name="miscellaneous">Diverso</string>
     <string name="textaction">Acción de texto</string>
@@ -347,7 +347,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="heading_3">Título 3</string>
     <string name="heading_4">Título 4</string>
     <string name="heading_5">Título 5</string>
-    <string name="heading_6">Encabezamiento 6</string>
+    <string name="heading_6">Título 6</string>
     <string name="bold">Negrita</string>
     <string name="italic">Cursiva</string>
     <string name="highlighted">Resaltado</string>
@@ -395,22 +395,22 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="restore_settings">Restaurar ajustes</string>
     <string name="failed_to_create_backup">Error al crear copia de seguridad</string>
     <string name="export_settings_to_json_file">Exportar ajustes a archivo json</string>
-    <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">Importar ajustes del archivo json. Si tiene éxito, la aplicación se reinicia.</string>
+    <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">Importar la configuración desde un archivo json de copia de seguridad. En caso de éxito, la aplicación se reiniciará.</string>
     <string name="failed_to_restore_settings_from_backup">Error al restaurar la configuración desde la copia de seguridad</string>
     <string name="newline_is_new_paragraph">Nueva línea = nuevo párrafo</string>
     <string name="search_in_content">Buscar en contenido</string>
     <string name="max_search_depth">Profundidad de búsqueda</string>
     <string name="ignore_list">Ignorar lista</string>
-    <string name="do_not_search_specified_files_and_folders">No busque archivos y carpetas especificados.\nUtilice una nueva línea como separador.\nUtilice comillas para nombres de directorio exactos: \"Test\".\nO usar Regex \'^[.].*\'\nEjemplos: ^\\..*\n\"test\"\n\"Test\"\n.*secreto.*\n.*BACKUP.*\n.*.ini</string>
+    <string name="do_not_search_specified_files_and_folders">No buscar archivos y carpetas especificados.\nUtilice una nueva línea como separador.\nUtilice comillas para nombres de directorio exactos: \"Prueba\".\nO usar Regex \'^[.].*\'\nEjemplos: ^\\..*\n\"prueba\"\n\"Prueba\"\n.*secreto.*\n.*BACKUP.*\n.*.ini</string>
     <string name="regex_search">Búsqueda Regex</string>
-    <string name="case_sensitive">Distingue mayúsculas</string>
+    <string name="case_sensitive">Distinguir mayúsculas y minúsculas</string>
     <string name="stop_search_after_first_match">Detener la búsqueda después de la primera coincidencia</string>
     <string name="regex_can_not_be_compiled">Regex no puede ser compilado</string>
     <string name="keep_both">Mantener ambos</string>
-    <string name="skip">Saltar</string>
+    <string name="skip">Omitir</string>
     <string name="overwrite">Sobrescribir</string>
     <string name="keep_both_all">Mantener ambos (todos)</string>
-    <string name="skip_all">Saltar (todo)</string>
+    <string name="skip_all">Omitir (todo)</string>
     <string name="overwrite_all">Sobrescribir (todo)</string>
     <string name="copy_move_conflict_message">\'%s\' ya existe en %s</string>
     <string name="additional_contexts_and_projects">Conjuntos y proyectos adicionales</string>
@@ -419,17 +419,17 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="browse_by_project">Navegar por proyecto</string>
     <string name="browse_by_context">Navegar por contexto</string>
     <string name="insert_project">Insertar proyectos</string>
-    <string name="insert_context">Insert contexts</string>
-    <string name="browse_todo">Ver tarea pendiente</string>
-    <string name="browse_by_priority">Navegar por prioridad</string>
-    <string name="browse_by_due_date">Navegar por fecha límite</string>
-    <string name="due_overdue">Atrasado</string>
+    <string name="insert_context">Insertar contextos</string>
+    <string name="browse_todo">Explorar tareas pendientes</string>
+    <string name="browse_by_priority">Explorar por prioridad</string>
+    <string name="browse_by_due_date">Explorar por fecha límite</string>
+    <string name="due_overdue">Vencido</string>
     <string name="due_today">Vence hoy</string>
     <string name="due_future">Vence en el futuro</string>
     <string name="completed">Completado</string>
-    <string name="match_any">Coincidir Cualquier</string>
+    <string name="match_any">Coincidir cualquiera</string>
     <string name="match_all">Coincidir todos</string>
-    <string name="dynamic_notebook_root_links">Búsqueda dinámica para la raíz del cuaderno</string>
+    <string name="dynamic_notebook_root_links">Búsqueda dinámica de la raíz del cuaderno</string>
     <string name="search_dynamically_for_notebook_root">Para seguir los enlaces de la wiki, busque dinámicamente el archivo notebook.zim para identificar el directorio raíz del cuaderno actual. Marque esta opción si utiliza múltiples cuadernos zim o el directorio de cuadernos establecido en la aplicación no corresponde a su cuaderno zim.</string>
     <string name="share_into_format_prefix_for_text_shared">Formato/prefijo para texto compartido en Markor. Sigue las reglas de SimpleDateFormat.\n\nUtilice el marcador de posición \'%s\' (rodeado por comillas simples) para colocar el texto compartido. Si no se especifica, el texto compartido se añade y el formato utilizado como prefijo.</string>
     <string name="share_into_format">Compartir en - Formato</string>
