--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -81,7 +81,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="language">Idioma</string>
     <string name="error_need_storage_permission_to_save_documents">Necessitem permís d\'emmagatzematge per desar documents</string>
     <string name="open_with">Obre amb</string>
-    <string name="sort_by">Ordenar per</string>
+    <string name="sort_by">Ordena per</string>
     <string name="date">Data</string>
     <string name="deleteme____1">Nom</string>
     <string name="size">Mida</string>
@@ -242,7 +242,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="description">Descripció</string>
     <string name="edit_picture">Edita la imatge</string>
     <string name="math">Matemàtiques</string>
-    <string name="enter_yaml_front_matter_attributes_to_show">Introduïu els atributs de YAML Front Matter per mostrar-los al començament dels documents visualitzats. capçalera. Introduïu les claus separades per comes. Deixeu-lo en blanc per a cap o feu servir \'*\' per a tots. \n\nSi teniu alguna clau, és a dir, títol: \"Hola\" definida i hi ha {{ post.title }} al vostre text, sempre es substituirà. D\'aquesta manera, podeu fer una visualització de matèria frontal personalitzada.</string>
+    <string name="enter_yaml_front_matter_attributes_to_show">Mostra els atributs de YAML Front Matter introduïts a la part superior als documents visualitzats. Introduïu les claus separades per comes. Deixeu-lo en blanc per a cap o feu servir \'*\' per a tots. \n\nSi es defineix algun atribut al document (p.ex. títol: \'Hola\') i també hi ha {{ post.title }} al document, se substituirà. Podeu crear un encapçalament personalitzat de Front Matter d\'aquesta manera.</string>
     <string name="table_of_contents">Taula de continguts</string>
     <string name="miscellaneous">Divers</string>
     <string name="textaction">Accions de text</string>
@@ -420,7 +420,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="browse_by_context">Navega per context</string>
     <string name="insert_project">Insereix projectes</string>
     <string name="insert_context">Insereix contextos</string>
-    <string name="browse_todo">Navega per tot</string>
+    <string name="browse_todo">Navega per tasca pendent</string>
     <string name="browse_by_priority">Navega per prioritat</string>
     <string name="browse_by_due_date">Navega per data de venciment</string>
     <string name="due_overdue">Vençut</string>
