--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -242,7 +242,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="description">Descrizione</string>
     <string name="edit_picture">Modifica immagine</string>
     <string name="math">Matematica</string>
-    <string name="enter_yaml_front_matter_attributes_to_show">Inserisci gli attributi YAML Front Matter da mostrare all\'inizio dei documenti visualizzati. intestazione. Inserisci le chiavi separate da virgole. Lasciare vuoto per nessuna o usare \'*\' per tutti. \n\nSe hai una chiave, ad es. title: \'Ciao\' definito e c\'è {{ post.title }} nel tuo testo, sarà sempre sostituito. In questo modo è possibile visualizzare una questione frontale personalizzata.</string>
+    <string name="enter_yaml_front_matter_attributes_to_show">Visualizza gli attributi YAML Front Matter inseriti in cima ai documenti visualizzati. Inserisci le chiavi separate da virgole. Lascia vuoto per nessuno o usa \'*\' per tutti. \n\nSe un attributo è definito nel documento (es. title: \'Ciao\') e nel tuo documento c\'è {{ post.title }}, esso verrà sostituito. Puoi fare un\'intestazione personalizzata di Front Matter in questo modo.</string>
     <string name="table_of_contents">Indice</string>
     <string name="miscellaneous">Varie</string>
     <string name="textaction">Azione sul testo</string>
