--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -242,7 +242,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="description">Descrição</string>
     <string name="edit_picture">Editar imagem</string>
     <string name="math">Matemática</string>
-    <string name="enter_yaml_front_matter_attributes_to_show">Digite os atributos de Matérias Virtuais YAML a serem exibidos no início dos documentos visualizados. cabeçalho. Insira as teclas separadas por vírgulas. Deixe em branco para nenhum ou use \'*\' para todos. \n\nSe você tem alguma chave, ou seja, title: \'Olá\' definido e há {{ post.title }} no seu texto, ele sempre será substituído. Você pode fazer uma frente personalizada exibir desta maneira.</string>
+    <string name="enter_yaml_front_matter_attributes_to_show">Exiba os atributos de Matérias Virtuais YAML digitados em cima em documentos visualizados. Insira as teclas separadas por vírgulas. Deixe em branco para nenhum ou use \'*\' para todos. \n\nSe algum atributo for definido no documento (por exemplo, title: \'Hello\') e {{ post.title }} em seu documento também ele foi substituído. Você pode fazer uma questão de Frente personalizada indo nessa direção.</string>
     <string name="table_of_contents">Índice</string>
     <string name="miscellaneous">Diversos</string>
     <string name="textaction">Ação de texto</string>
