--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -350,7 +350,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="heading_6">6 级标题</string>
     <string name="bold">粗体</string>
     <string name="italic">斜体</string>
-    <string name="highlighted">高亮的</string>
+    <string name="highlighted">突出高亮</string>
     <string name="strikeout">删除线</string>
     <string name="inline_code">行内代码</string>
     <string name="horizontal_line">水平线</string>
@@ -430,8 +430,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="match_any">任何匹配</string>
     <string name="match_all">匹配全部</string>
     <string name="dynamic_notebook_root_links">动态搜索笔记本根目录</string>
-    <string name="search_dynamically_for_notebook_root">为了跟随wiki链接，动态地搜索notbook.zim文件来识别当前笔记本的根目录。 如果您使用多个zim笔记本或者应用程序中的笔记本目录与您的zim笔记本不对应，请选中此项。</string>
-    <string name="share_into_format_prefix_for_text_shared">共享到 Markor的文本格式/前缀。关注Android的 SimpleDateFormat 规则。\n\n使用占位符\'%s\' (周围为单引号) 来定位共享文本。 如果未指定，共享文本将附加，并使用格式作为前缀。</string>
+    <string name="search_dynamically_for_notebook_root">为了跟随维基链接，动态地搜索notbook.zim文件来识别当前笔记本的根目录。 如果您使用多个zim笔记本或者应用程序中的笔记本目录与您的zim笔记本不对应，请选中此项。</string>
+    <string name="share_into_format_prefix_for_text_shared">共享到 Markor的文本格式/前缀。关注安卓的 SimpleDateFormat 规则。\n\n使用占位符\'%s\' (周围为单引号) 来定位共享文本。 如果未指定，共享文本将附加，并使用格式作为前缀。</string>
     <string name="share_into_format">分享到 - 格式</string>
     <string name="auto_format">自动格式</string>
 </resources>
