--- a/app/src/main/res/values-eo/strings.xml
+++ b/app/src/main/res/values-eo/strings.xml
@@ -145,6 +145,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="description">Priskribo</string>
     <string name="edit_picture">Redakti bildon</string>
     <string name="math">Matematiko</string>
+    <string name="enter_yaml_front_matter_attributes_to_show">Eksponi la YAML frontan aferon supre en rigardataj dokumentoj. Entajpu ŝlosilojn apartitajn per komoj. Lasu malplene por nenio, aŭ uzu \"*\" por ĉio.\n\nSe ajn atributo estas difinita en la dokumento (ekz title: \'Saluton\') kaj estas {{ post.title }} en via dokumento, ĝi estos anstataŭata. Vi povas ĉi-maniere farigi laŭmendan frontan aferon.</string>
     <string name="table_of_contents">Enhavtabelo</string>
     <string name="miscellaneous">Aliaĵoj</string>
     <string name="textaction">Teksta ago</string>
