--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -434,4 +434,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_into_format_prefix_for_text_shared">Format/Prefix pentru textul partajat cu Markor. Urmează regulile SimpleDateFormat ale Android.\n\nUtilizați substituentul \'%s\' (înconjurat de oferte unice) pentru a poziționa textul partajat. Dacă nu este specificat, textul partajat este anexat și formatul folosit ca prefix.</string>
     <string name="share_into_format">Partajare în - Format</string>
     <string name="auto_format">Format automat</string>
+    <string name="insert_snippet">Insert snippet</string>
 </resources>
