--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -434,4 +434,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_into_format_prefix_for_text_shared">Format/Præfiks for tekst delt i Markor. Følger Androids SimpleDateFormat regler.\n\nBrug pladsholderen \'%s\' (omgivet af enkelte anførselstegn) til at placere den delte tekst. Hvis ikke angivet, tilføjes den delte tekst og formatet bruges som præfiks.</string>
     <string name="share_into_format">Del på - Format</string>
     <string name="auto_format">Auto-format</string>
+    <string name="insert_snippet">Insert snippet</string>
 </resources>
