--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -434,4 +434,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_into_format_prefix_for_text_shared">Formato/Prefisso per il testo condiviso in Markor. Segue le regole SimpleDateFormat di Android.\n\nUsa il segnaposto \'%s\' (circondato da virgolette singole) per posizionare il testo condiviso. Se non specificato, il testo condiviso è messo in fondo e il formato usato come prefisso.</string>
     <string name="share_into_format">Condividi in - Formato</string>
     <string name="auto_format">Autoformattazione</string>
+    <string name="insert_snippet">Insert snippet</string>
 </resources>
