--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -434,4 +434,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_into_format_prefix_for_text_shared">Формат/Префикс для текста, общего в Markor. Следуйте правилам SimpleDateFormat Android.\n\nИспользуйте заполнитель \'%s\' (окружённый одинарными кавычками) для размещения общего текста. Если не указано, общий текст добавляется и формат используется в качестве префикса.</string>
     <string name="share_into_format">Поделиться - Формат</string>
     <string name="auto_format">Автоформат</string>
+    <string name="insert_snippet">Insert snippet</string>
 </resources>
