--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -434,4 +434,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_into_format_prefix_for_text_shared">Format/Prefix för text som delas in i Markor. Följer Androids SimpleDateFormat regler.\n\nAnvänd platshållaren \'%s\' (omgiven av enstaka offerter) för att placera den delade texten. Om den inte anges läggs den delade texten till och formatet används som prefix.</string>
     <string name="share_into_format">Dela till - Format</string>
     <string name="auto_format">Auto-format</string>
+    <string name="insert_snippet">Insert snippet</string>
 </resources>
