--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -434,4 +434,5 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_into_format_prefix_for_text_shared">Markor\'da paylaşılan metni biçimlendir / öne al. Android\'in SimpleDateFormat yani Basit Tarih Formatına uygundur. \n\n \'%s\' ayracını (tek tırnakların içinde) paylaşılan metni konumlandırmak için kullan. Eğer belirtilmemişse, paylaşılan metin eklenir ve biçim başa eklenir.</string>
     <string name="share_into_format">Paylaşım - Sayfa Düzeninde</string>
     <string name="auto_format">Otomatik biçim</string>
+    <string name="insert_snippet">Kod parçacığı ekle</string>
 </resources>
