--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -116,7 +116,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="refresh">更新</string>
     <string name="create_shortcut">建立捷徑</string>
     <string name="tried_to_create_shortcut_for_this_notice">嘗試在您的主頁建立一個捷徑以方便編輯這個文件，注意，有的啟動器不支援這個功能。</string>
-    <string name="file_not_in_save_path_do_import_notice__appspecific">所選文件未列於程式的\"筆記本\"目錄內，您要將它複製到現行目錄內嗎？這樣可能會覆蓋原來檔案。</string>
+    <string name="file_not_in_save_path_do_import_notice__appspecific">所選的檔案不在這個程式的筆記本目錄中，您要將它複製到現行資料夾裡嗎？這將會覆寫現有的同名檔案。</string>
     <string name="file_not_in_current_folder_do_copy__appspecific">所選文件未列於程式的\"筆記本\"目錄內，您要將它複製到現行目錄內嗎？這樣可能會覆蓋原來檔案。</string>
     <string name="files_and_folders">檔案和資料夾</string>
     <string name="document_browser">文件瀏覽器</string>
