--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -163,7 +163,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending_if_two_or_more_spaces">標記末尾有兩三個空格的行</string>
     <string name="use_monospace_for_code">程式碼使用 Monospace</string>
     <string name="disable_code_block_highlight">停用代碼語法突顯</string>
-    <string name="auto_renumber_ordered_list">編號清單自動重新編號</string>
+    <string name="auto_renumber_ordered_list">有序清單自動重新編號</string>
     <string name="auto_renumber_ordered_list_slowdown">此設定可能影響應用程式效能</string>
     <string name="use_different_fonttype_slow_down">動態地變更字型將影響程式效能</string>
     <string name="general">平常</string>
@@ -171,7 +171,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="space_between_lines_in_percent">行距以百分比表示</string>
     <string name="line_spacing">行距</string>
     <string name="archive_does_move_done_tasks">移動完成的工作到相同資料夾的指定文件上。</string>
-    <string name="sort_tasks_by_selected_order">依所選的順序排列</string>
+    <string name="sort_tasks_by_selected_order">依所選的順序對任務進行排列</string>
     <string name="special_key">特殊鍵</string>
     <string name="key_page_up">往上頁 (Page Up)</string>
     <string name="key_page_down">往下頁 (Page Down)</string>
